--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jatflix",
   "version": "0.1.0",
+  "homepage": "https://jatflix-e6701.firebaseapp.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,9 +11,20 @@
     "@types/node": "^16.18.40",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.4.0",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.1.0",
+    "firebase-tools": "^12.4.7",
+    "movie-trailer": "^3.0.2",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
+    "sass": "^1.65.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
